prevent textareas from being stretchable

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -47,3 +47,10 @@ a:hover {
     color: gray;
 }
 
+/* input:focus {
+  outline: none;
+} */
+
+textarea {
+  resize: none
+}
